--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -50,7 +50,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="navItem un" href="#">News</a>
+            <a class="navItem un" href="#news">News</a>
           </li>
           <li class="nav-item">
             <a class="navItem un" href="#">Contact</a>
@@ -296,8 +296,8 @@
               <a href="#">Brand</a>
             </div>
             <ul class="list-unstyled mb-5 ">
-              <li><a class="nav-link" href="#">About</a></li>
-              <li><a class="nav-link" href="#">Services</a></li>
+              <li><a class="nav-link" href="#">Home</a></li>
+              <li><a class="nav-link" href="#about">About</a></li>
               <li><a class="nav-link" href="#">Press</a></li>
               <li><a class="nav-link" href="#">Careers</a></li>
               <li><a class="nav-link" href="#">FAQ</a></li>
